<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_fragment_label" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites_fragment_label" />
    <item
        android:id="@+id/uploadedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_upload"
        android:title="@string/uploaded_fragment_label" />
</menu>