<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_filter"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/min_bottom_sheet_height">
...
